yet another spacing issue with featured-products, looking into new fix

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -205,12 +205,13 @@ a.product-item-meta__title {
 }
 .product-content__featured_data-and-product {
   gap: var(--grid-gap);
-  display: grid;
+  display: flex;
   align-items: start;
+  flex: auto;
 }
 @media screen and (max-width: 1000px) {
   .product-content__featured-data {
-    width: calc(100vw - var(--container-gutter) * 2);
+    /* width: calc(100vw - var(--container-gutter) * 2); */
   }
   .product-content__featured_data-and-product {
     gap: var(--grid-gap);
